feat: add redirect

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="0; URL=https://github.com/exadioo" />
   <title>E X Λ D I O</title>
 </head>
 <body>
-  <h1>Under Construction</h1>
 </body>
 </html>
